[gd_scene format=3 uid="uid://cbilgkb2bo5dk"]

[ext_resource type="Script" uid="uid://cge1q5gahkspo" path="res://addons/crunk_utils/playgrounds/drag_move_playground.gd" id="1_main"]
[ext_resource type="Script" uid="uid://d2akiyf2nruk2" path="res://addons/crunk_utils/dragdrop/input/drag_drop_event_bus.gd" id="2_0crd5"]
[ext_resource type="PackedScene" uid="uid://dnfo0vigmytnc" path="res://addons/crunk_utils/dragdrop/controllers/drag_mover_behavior.tscn" id="3_event_bus"]
[ext_resource type="PackedScene" uid="uid://saa7el83xvb0" path="res://addons/crunk_utils/dragdrop/components/receptor_control_component.tscn" id="4_usgru"]
[ext_resource type="PackedScene" uid="uid://5kmdyhee6pix" path="res://addons/crunk_utils/dragdrop/components/draggable_control_component.tscn" id="5_v7pfg"]

[node name="DragMovePlayground" type="Control" unique_id=1456351808]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_main")

[node name="DragDropEventBus" type="Node" parent="." unique_id=1408630599]
script = ExtResource("2_0crd5")

[node name="DragMoverBehavior" parent="." unique_id=1063245657 instance=ExtResource("3_event_bus")]

[node name="ResetButton" type="Button" parent="." unique_id=901670602]
layout_mode = 0
offset_left = 50.0
offset_top = 200.0
offset_right = 150.0
offset_bottom = 230.0
mouse_filter = 2
text = "Reset Positions"

[node name="StatusLabel" type="Label" parent="." unique_id=1436915498]
layout_mode = 0
offset_left = 50.0
offset_top = 250.0
offset_right = 350.0
offset_bottom = 273.0
text = "Drag colored squares to gray drop zones"
autowrap_mode = 3

[node name="Control" type="Control" parent="." unique_id=829515009]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Receptor1" type="ColorRect" parent="Control" unique_id=1141368891]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 867.0
offset_top = 251.0
offset_right = 1067.0
offset_bottom = 331.0
color = Color(0.560929, 0.048963904, 0.21056303, 1)

[node name="ReceptorControlComponent" parent="Control/Receptor1" unique_id=558661480 instance=ExtResource("4_usgru")]
layout_mode = 1
mouse_filter = 2

[node name="Receptor2" type="ColorRect" parent="Control" unique_id=193857297]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 136.0
offset_top = 360.0
offset_right = 336.0
offset_bottom = 440.0
color = Color(0.55337554, 0.10296836, 0.105965845, 1)

[node name="ReceptorControlComponent2" parent="Control/Receptor2" unique_id=1579250453 instance=ExtResource("4_usgru")]
layout_mode = 1
offset_left = 731.0
offset_top = -109.0
offset_right = 731.0
offset_bottom = -109.0
mouse_filter = 2

[node name="Receptor3" type="ColorRect" parent="Control" unique_id=1393619180]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 500.0
offset_top = 270.0
offset_right = 700.0
offset_bottom = 350.0
color = Color(0.55337554, 0.10296836, 0.105965845, 1)

[node name="ReceptorControlComponent3" parent="Control/Receptor3" unique_id=262157722 instance=ExtResource("4_usgru")]
layout_mode = 1
offset_left = 367.0
offset_top = -19.0
offset_right = 367.0
offset_bottom = -19.0
mouse_filter = 2

[node name="DraggableRed" type="ColorRect" parent="Control" unique_id=547532260]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 338.0
offset_top = 56.0
offset_right = 398.0
offset_bottom = 156.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="DraggableControlComponent" parent="Control/DraggableRed" unique_id=2001840134 instance=ExtResource("5_v7pfg")]
layout_mode = 1
mouse_filter = 2

[node name="DraggableGreen" type="ColorRect" parent="Control" unique_id=2094599924]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 418.0
offset_top = 56.0
offset_right = 478.0
offset_bottom = 156.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="DraggableControlComponent2" parent="Control/DraggableGreen" unique_id=763675058 instance=ExtResource("5_v7pfg")]
layout_mode = 1
offset_left = -80.0
offset_right = -80.0
mouse_filter = 2

[node name="DraggableBlue" type="ColorRect" parent="Control" unique_id=166775458]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 498.0
offset_top = 56.0
offset_right = 558.0
offset_bottom = 156.0
color = Color(0.2, 0.2, 0.8, 1)

[node name="DraggableControlComponent3" parent="Control/DraggableBlue" unique_id=830003963 instance=ExtResource("5_v7pfg")]
layout_mode = 1
offset_left = -160.0
offset_right = -160.0
mouse_filter = 2

[node name="DraggableYellow" type="ColorRect" parent="Control" unique_id=342894333]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 578.0
offset_top = 56.0
offset_right = 638.0
offset_bottom = 156.0
color = Color(0.8, 0.8, 0.2, 1)

[node name="DraggableControlComponent4" parent="Control/DraggableYellow" unique_id=665291592 instance=ExtResource("5_v7pfg")]
layout_mode = 1
offset_left = -240.0
offset_right = -240.0
mouse_filter = 2
